public enum EtiquetaTarea {
    TRABAJO,
    PERSONAL,
    ESTUDIO,
    HOGAR,
    SALUD,
    OTROS
}

public enum TipoTransaccion {
    GASTO,
    INGRESO
}

public enum IconoEstadoAnimo {
    GENIAL,
    BIEN,
    NORMAL,
    MAL,
    MUYMAL
}